<resources>
    <string name="app_name">GitHub Summary App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_history">History</string>
    <string name="search_label">Enter with GitHub User</string>
    <string name="user_login">"Login : "</string>
    <string name="user_name">"Name : "</string>
    <string name="user_email">"Email : "</string>
    <string name="user_company">"Company : "</string>
    <string name="user_location">"Location : "</string>
    <string name="user_blog">"Blog : "</string>
    <string name="user_repositories">"Repositories : "</string>
    <string name="user_gists">"Gists : "</string>
    <string name="user_followers">"Followers : "</string>
    <string name="user_following">"Following : "</string>
    <string name="user_more_info">"More : "</string>
    <string name="user_input_empty">User input  is empty</string>
    <string name="user_not_found">User not found</string>
    <string name="title_favorite">Favorite</string>
    <string name="added_user_to_favorite">Added user to favorite</string>
    <string name="error_in_add_user_to_favorite">Error in add user to favorite</string>
    <string name="user_removed_from_favorite">"User removed from favorite "</string>
    <string name="error_removing_user_from_favorite">"Error removing user from favorite "</string>
    <string name="no_user_added_to_favorites">"No user added to favorites "</string>
    <string name="no_user_selected">No user selected</string>
    <string name="not_connected_to_internet">Not connected to internet</string>
    <string name="title_user">User</string>
    <string name="title_search">Search</string>
    <string name="user_has_no_history">"User has no history "</string>
</resources>