<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.com.githubsummaryapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_user"
        android:name="br.com.githubsummaryapp.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="br.com.githubsummaryapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_navigation_history_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="br.com.githubsummaryapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>
</navigation>